src/test/compile-fail/binop-mul-bool.rs
// error-pattern:* cannot be applied to type `bool`

fn main() { let x = true * false; }
